<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *
 * Copyright (C) 2013 www.yaacc.de 
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_previous"
        android:icon="@drawable/player_start"
        android:orderInCategory="110"
        android:title="@string/previous"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_play"
        android:icon="@drawable/player_play"
        android:orderInCategory="110"
        android:title="@string/play"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_pause"
        android:icon="@drawable/player_pause"
        android:orderInCategory="110"
        android:title="@string/pause"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/player_stop"
        android:orderInCategory="110"
        android:title="@string/stop"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/player_end"
        android:orderInCategory="110"
        android:title="@string/next"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/button_cancel"
        android:orderInCategory="110"
        android:title="@string/exit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/yaacc_log"
        android:orderInCategory="120"
        android:title="@string/title_activity_yaacc_log"
        app:showAsAction="never" />
     <item
        android:id="@+id/yaacc_about"
        android:orderInCategory="120"
         android:title="@string/yaacc_about"
         app:showAsAction="never" />

</menu>