<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/yaacc_log"
        android:orderInCategory="110"
        android:title="@string/title_activity_yaacc_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/yaacc_about"
        android:orderInCategory="120"
        android:title="@string/yaacc_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/button_cancel"
        android:orderInCategory="130"
        android:title="@string/exit"
        app:showAsAction="never" />
    

</menu>