<?xml version="1.0" encoding="utf-8"?><!--
 *
 * Copyright (C) 2013 www.yaacc.de 
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.AVTransportPlayerActivity">


    <Switch
        android:id="@+id/avtransportPlayerActivityControlMuteSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/activity_remote_player_mute" />

    <TextView
        android:id="@+id/avtransportPlayerActivityControlVolumeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avtransportPlayerActivityControlMuteSwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:labelFor="@+id/avtransportPlayerActivityControlVolumeSeekBar"
        android:text="@string/activity_remote_player_volume"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/avtransportPlayerActivityControlVolumeSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivityImageView"
        android:layout_below="@+id/avtransportPlayerActivityControlMuteSwitch"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/avtransportPlayerActivityControlVolumeTextView"
        android:layout_toRightOf="@+id/avtransportPlayerActivityControlVolumeTextView" />


    <ImageView
        android:id="@+id/avtransportPlayerActivityImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/avtransportPlayerActivityCurrentItem"
        android:layout_below="@id/avtransportPlayerActivityControlVolumeTextView"
        android:contentDescription="@string/avtransportPlayerActivityImageView"
        app:srcCompat="@drawable/device" />


    <TextView
        android:id="@+id/avtransportPlayerActivityCurrentItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivityElapsedTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/playerCurrentItem" />

    <Space
        android:id="@+id/avtransportPlayerActivitySeparator3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityCurrentItem"
        android:layout_toEndOf="@+id/avtransportPlayerActivityCurrentItem"
        android:layout_toRightOf="@+id/avtransportPlayerActivityCurrentItem" />

    <TextView
        android:id="@+id/avtransportPlayerActivityNextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityCurrentItem"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_toEndOf="@+id/avtransportPlayerActivitySeparator3"
        android:layout_toRightOf="@+id/avtransportPlayerActivitySeparator3"
        android:text="@string/avtransportPlayerActivityNextLabel" />


    <TextView
        android:id="@+id/avtransportPlayerActivityNextItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityCurrentItem"
        android:layout_alignTop="@+id/avtransportPlayerActivityNextLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/avtransportPlayerActivityNextLabel"
        android:layout_toRightOf="@+id/avtransportPlayerActivityNextLabel"
        android:gravity="end"
        android:text="@string/playerNextItem" />


    <TextView
        android:id="@+id/avtransportPlayerActivityElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivitySeekBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/playerTimeElapsed" />

    <TextView
        android:id="@+id/avtransportPlayerActivitySeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityElapsedTime"
        android:layout_toEndOf="@id/avtransportPlayerActivityElapsedTime"
        android:layout_toRightOf="@id/avtransportPlayerActivityElapsedTime"
        android:text="@string/playerTimeSeparator" />

    <TextView
        android:id="@+id/avtransportPlayerActivityDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityElapsedTime"
        android:layout_toEndOf="@id/avtransportPlayerActivitySeparator"
        android:layout_toRightOf="@id/avtransportPlayerActivitySeparator"
        android:text="@string/playerTimeDuration" />

    <Space
        android:id="@+id/avtransportPlayerActivitySeparator2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityElapsedTime"
        android:layout_toEndOf="@id/avtransportPlayerActivityDuration"
        android:layout_toRightOf="@id/avtransportPlayerActivityDuration" />

    <TextView
        android:id="@+id/avtransportPlayerActivityPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivitySeekBarLayout"
        android:layout_alignBaseline="@+id/avtransportPlayerActivityDuration"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/avtransportPlayerActivitySeparator2"
        android:layout_toRightOf="@+id/avtransportPlayerActivitySeparator2"
        android:gravity="end"
        android:text="@string/playerPosition"
        android:textAlignment="textEnd" />

    <RelativeLayout
        android:id="@+id/avtransportPlayerActivitySeekBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/avtransportPlayerActivityControls"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/avtransportPlayerActivityControlSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/avtransportPlayerActivityControls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/avtransportPlayerActivityControlPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/previous"
            app:srcCompat="@drawable/player_start" />

        <ImageButton
            android:id="@+id/avtransportPlayerActivityControlPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/avtransportPlayerActivityControlPrev"
            android:layout_toRightOf="@+id/avtransportPlayerActivityControlPrev"
            android:contentDescription="@string/play"
            app:srcCompat="@drawable/player_play" />

        <ImageButton
            android:id="@+id/avtransportPlayerActivityControlPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/avtransportPlayerActivityControlPlay"
            android:layout_toRightOf="@+id/avtransportPlayerActivityControlPlay"
            android:contentDescription="@string/pause"
            app:srcCompat="@drawable/player_pause" />

        <ImageButton
            android:id="@+id/avtransportPlayerActivityControlStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/avtransportPlayerActivityControlPause"
            android:layout_toRightOf="@+id/avtransportPlayerActivityControlPause"
            android:contentDescription="@string/stop"
            app:srcCompat="@drawable/player_stop" />

        <ImageButton
            android:id="@+id/avtransportPlayerActivityControlNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/avtransportPlayerActivityControlStop"
            android:layout_toRightOf="@+id/avtransportPlayerActivityControlStop"
            android:contentDescription="@string/next"
            app:srcCompat="@drawable/player_end" />

        <ImageButton
            android:id="@+id/avtransportPlayerActivityControlExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/avtransportPlayerActivityControlNext"
            android:layout_toRightOf="@+id/avtransportPlayerActivityControlNext"
            android:contentDescription="@string/exit"
            app:srcCompat="@drawable/button_cancel" />
    </RelativeLayout>

</RelativeLayout>